--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
+
     <string name="app_name">Basics_Codelab</string>
-    <string name="search">Поиск</string>
+
+    <string name="ab1_search">Поиск</string>
+    <string name="ab1_inversions">Инверсия</string>
+
+    <string name="fc2_nature_meditations">Природная медитация</string>
+
+    <string name="hs1_align_your_body">Выровняйте ваше тело</string>
+    <string name="hs2_favorite">Избранное</string>
+
 </resources>
